# knowlege

./: .gitignore  AGENTS.md  README.md
.omx/: metrics.json
ai-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-ocr.txt  requirements.txt  test_embed.py  test_ocr.py  test_vlm.py
ai-service/app/: __init__.py  config.py  main.py
ai-service/app/api/: parse.py
ai-service/app/api/v1/: health.py  pipeline.py  router.py
ai-service/app/schemas/: document_parse.py  health.py  pipeline.py
ai-service/app/services/: __init__.py
ai-service/app/services/chunker/: __init__.py  base.py  default.py  mock.py
ai-service/app/services/embedding/: base.py  mock.py  openai.py
ai-service/app/services/llm/: base.py  mock.py  openai.py
ai-service/app/services/parser/: __init__.py  base.py  errors.py  factory.py  image.py  image_utils.py  mock.py  normalization.py  ocr_paddle.py  office_docx.py  office_pptx.py  office_xlsx.py  pdf.py  router.py  structured.py  vlm_openai.py
ai-service/app/services/rerank/: __init__.py  base.py  cross_encoder.py  http.py  mock.py
ai-service/tests/: test_document_parse.py  test_health.py  test_parser_quality.py  test_pipeline.py
ai-service/tests/fixtures/: generate_mock_docs.py
ai-service/tests/fixtures/documents/: headings_tables.docx  multi_sheet.xlsx  tables_charts.pptx
backend/: Dockerfile  TestBcrypt.java  pom.xml
deploy/: .env.example  docker-compose.yml
scripts/: bench-retrieval.sh  seed-documents.sh
update/: update_summary0620.md  update_summary0622.md  walkthrough_phase2.md
web/: Dockerfile  (+4 more)
(+390 files in other folders)
