[project]
name = "knowledge-ai-service"
version = "0.1.0"
description = "FastAPI service for parsing, chunking, embedding, rerank, and LLM calls"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pypdf>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
